Added content and examples

--- a/index.html
+++ b/index.html
@@ -91,17 +91,17 @@
 						<code>hello-digitas.html</code>
 <pre class="fragment"><code class="lang-html"><link rel="import" href="/lib/polymer/polymer.html"></code></pre><pre class="fragment"><code class="lang-html">
 
-<dom-module id="hello-digitas">
+&lt;dom-module id="hello-digitas">
   <template>
     Hello Digitas!
   </template>
-</dom-module></code></pre><pre class="fragment"><code class="lang-html">
-
-<script>
-  Polymer({
-    is: 'hello-digitas'
-  });
-</script>
+</code></pre><pre class="fragment"><code class="lang-html">
+  <script>
+    Polymer({
+      is: 'hello-digitas'
+    });
+  </script>
+&lt;/dom-module>
 </code></pre>
 						<aside class="notes">
 							<p>The easiest way to create a Polymer element is to create an <code>html</code> file with the same name that the element will have, in this case <code>hello-digitas.html</code></p>
@@ -129,7 +129,18 @@
 				</section>
 
 				<section>
-					<h2>Compatibility</h2>
+					<section>
+						<h2>Compatibility</h2>
+						<img src="/img/compatibility.png" alt="Compatibility" class="strech" style="border-radius: 8px;">
+					</section>
+					<section>
+						<h2>Extra APIs</h2>
+						<img src="/img/extra-apis.png" alt="Extra APIs" class="strech" style="border-radius: 8px;">
+					</section>
+					<section>
+						<h2>Polyfills to the rescue</h2>
+						<img src="/img/polyfill.png" alt="Polyfill" class="strech" style="border-radius: 8px;">
+					</section>
 				</section>
 
 				<section>
@@ -139,6 +150,13 @@
 				<section>
 					<h2></h2>
 				</section>
+
+
+
+
+
+
+
 
 
 
