Added who uses polymer section

--- a/index.html
+++ b/index.html
@@ -368,13 +368,23 @@
 				</section>
 
 				<section>
-					<h2>Interesting Links!</h2>
-					<a href="https://www.materialpalette.com/">https://www.materialpalette.com/</a><br>
-					<a href="https://customelements.io/">https://customelements.io/</a><br>
-					<a href="http://builtwithpolymer.org/">http://builtwithpolymer.org/</a><br>
-					<a href="https://www.materialup.com/">https://www.materialup.com/</a><br>
-					<a href="https://polymerthemes.com/">https://polymerthemes.com/</a><br>
-					<a href="https://www.google.com/design/spec/material-design/introduction.html">https://www.google.com/design/spec/material-design/introduction.html</a>
+					<section>
+						<h2>Who uses Polymer?</h2>
+						https://vaadin.com/home
+						https://developer.salesforce.com/blogs/developer-relations/2014/10/chart-components-google-polymer-force-com.html
+						https://translate.google.com/community
+						https://play.google.com/music/listen#/now
+						https://gaming.youtube.com/
+					</section>
+					<section>
+						<h2>Interesting Links!</h2>
+						<a href="https://www.materialpalette.com/">https://www.materialpalette.com/</a><br>
+						<a href="https://customelements.io/">https://customelements.io/</a><br>
+						<a href="http://builtwithpolymer.org/">http://builtwithpolymer.org/</a><br>
+						<a href="https://www.materialup.com/">https://www.materialup.com/</a><br>
+						<a href="https://polymerthemes.com/">https://polymerthemes.com/</a><br>
+						<a href="https://www.google.com/design/spec/material-design/introduction.html">https://www.google.com/design/spec/material-design/introduction.html</a>
+					</section>
 				</section>
 
 
